# sauron

./: .gitignore  CMakeLists.txt  main.cpp
cmake/: FindOpenCV.cmake
include/screen_capture/: ScreenCapture.h
src/screen_capture/: ScreenCapture.cpp
